# sknlp-server

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  server.py  start_sknlp_server.sh
sknlp_serving/: exception.py  tfserving.py
sknlp_serving/model/: __init__.py  base_model.py  classification.py  tagging.py
tf_serving/: Dockerfile  start_tf_server.sh
